Bug 425118 - Incorrect use of "Ctrl+" in the UI
Summary: Incorrect use of "Ctrl+" in the UI
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.2.8
Platform: macOS (DMG) macOS
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-07 17:20 UTC by WynterTheCat
Modified: 2020-08-30 15:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Depiction of incorrect behavior (16.27 KB, image/png)
2020-08-07 17:20 UTC, WynterTheCat
Details

Note You need to log in before you can comment on or make changes to this bug.
Description WynterTheCat 2020-08-07 17:20:56 UTC
Created attachment 130715 [details]
Depiction of incorrect behavior

SUMMARY
The start page shows "Ctrl+" keystrokes for commands like New Document rather than saying "Command-" which is correct for a Mac.

STEPS TO REPRODUCE
1. Launch Krita
2. Show Default Window

OBSERVED RESULT
The start page shows "Ctrl+" keystrokes for commands like New Document rather than saying "Command-" which is correct for a Mac.

EXPECTED RESULT
Should list "Command-N" and similar for commands, as Control is reserved as a tertiary key used for other inputs.

SOFTWARE/OS VERSIONS
macOS: macOS Catalina (OS X Base System, version 10.15.6) 

ADDITIONAL INFORMATION
Comment 1 Santiago Munoz 2020-08-30 15:37:55 UTC
Git commit b4577f3be5ada324ac04525362a1d80d918710f1 by Santiago A M Rodriguez.
Committed on 30/08/2020 at 14:47.
Pushed by rempt into branch 'master'.

Show shortcuts in native format where applicable

Instead of statically showing "Ctrl+N" and the sorts in all platforms, display shortcuts in a native way for each.

M  +1    -1    libs/ui/KisPart.cpp
M  +1    -1    libs/ui/KisViewManager.cpp
M  +4    -2    libs/ui/KisWelcomePageWidget.cpp
M  +1    -1    plugins/python/tenscripts/Manual.html
M  +2    -1    plugins/python/tenscripts/uitenscripts.py

https://invent.kde.org/graphics/krita/commit/b4577f3be5ada324ac04525362a1d80d918710f1
Comment 2 Halla Rempt 2020-08-30 15:39:01 UTC
Git commit ed74e2aee6872b4544a85a0796b7e48ea7b71fd8 by Boudewijn Rempt, on behalf of Santiago A M Rodriguez.
Committed on 30/08/2020 at 15:38.
Pushed by rempt into branch 'krita/4.3'.

Show shortcuts in native format where applicable

Instead of statically showing "Ctrl+N" and the sorts in all platforms, display shortcuts in a native way for each.
(cherry picked from commit b4577f3be5ada324ac04525362a1d80d918710f1)

M  +1    -1    libs/ui/KisPart.cpp
M  +1    -1    libs/ui/KisViewManager.cpp
M  +4    -2    libs/ui/KisWelcomePageWidget.cpp
M  +1    -1    plugins/python/tenscripts/Manual.html
M  +2    -1    plugins/python/tenscripts/uitenscripts.py

https://invent.kde.org/graphics/krita/commit/ed74e2aee6872b4544a85a0796b7e48ea7b71fd8