Show shortcuts in native format where applicable

Instead of statically showing "Ctrl+N" and the sorts in all platforms, display shortcuts in a native way for each.

BUG:425118
(cherry picked from commit b4577f3be5ada324ac04525362a1d80d918710f1)